Prevent overlap of profile list item text by the footer cta column

--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -199,7 +199,7 @@
   font-size: 36px;
   font-size: 3.5vw;
   left: 0;
-  padding: 10%;
+  padding: 12%;
   position: absolute;
   right: 0;
   width: 100%;
@@ -253,7 +253,7 @@
 
 .footer-column-wrap {
   display: table;
-  margin-top: -35px; // push up into .profile-list
+  margin-top: -15px; // push up into .profile-list
   position: relative;
   width: 100%;
   z-index: 2;
